forgot your password?

--- a/HealthClub/templates/physio-slim/login.html
+++ b/HealthClub/templates/physio-slim/login.html
@@ -39,6 +39,7 @@
 			<div class="mt-4">
 				<div style="color: #fff;">
 					Don't have an account? <a href="{% url 'register' %}" class="ml-2 link-dark">Sign Up</a>
+					 <a href="{% url 'reset_password' %}" class="ml-2 link-dark">Forgot your password?</a>
 				</div>
 
 			</div>
