login with email

--- a/HealthClub/templates/physio-slim/login.html
+++ b/HealthClub/templates/physio-slim/login.html
@@ -21,7 +21,8 @@
 					<div class="input-group mb-3">
 						<div class="input-group-append">
 						</div>
-						<input type="text" name="username" placeholder="Username..." class="form-control">
+						<input type="text" label= "username" name="username" placeholder="username..." class="form-control">
+
 					</div>
 					<div class="input-group mb-2">
 						<div class="input-group-append">
