--- a/HealthClub/templates/physio-slim/home.html
+++ b/HealthClub/templates/physio-slim/home.html
@@ -1,3 +1,7 @@
 <h1>
     hi {{request.user}}
 </h1>
+<a class="nav-link logout" href="{% url 'logout' %}">
+    {{request.user|title}} 
+    <span class="logoutText">Log out</span>
+</a>
