--- a/HealthClub/templates/admin/base_site.html
+++ b/HealthClub/templates/admin/base_site.html
@@ -3,7 +3,7 @@
 {% block title %}{% if subtitle %}{{ subtitle }} | {% endif %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">Adminstration</a></h1>
+<h1 id="site-name"><b style="color:#f7f1e3">Physio-Slim</b></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
