--- a/HealthClub/templates/admin/base.html
+++ b/HealthClub/templates/admin/base.html
@@ -41,7 +41,7 @@
             {% endblock %}
             {% block userlinks %}
                 {% if site_url %}
-                    <a href="{%  url 'users' %}" style>Home</a> /
+                    <a href="{%  url 'home' %}" style>Home</a> /
                 {% endif %}
                 {% if user.is_active and user.is_staff %}
                     {% url 'django-admindocs-docroot' as docsroot %}
