--- a/HealthClub/templates/physio-slim/navbar.html
+++ b/HealthClub/templates/physio-slim/navbar.html
@@ -39,13 +39,13 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            {% if request.user.is_authenticated %}
+
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item mt-1">
                     <a class="nav-link" href="#">link1<i class='far fa-address-card'></i></a>
                 </li>
-               
+
                 <li class="nav-item mt-1">
                     <a class="nav-link" href="#">link3 <i class="fas fa-solid fa-plus" style="font-size: 12;"></i> </a>
                 </li>
@@ -63,21 +63,22 @@
             </ul>
 
 
-
+            {% if request.user.is_authenticated %}
 
             <ul class="navbar-nav mr-auto mb-2 mb-lg-0 pb-0">
 
-                <li class="nav-item">
-                    <a class="nav-link logout" href="{% url 'logout' %}">
-                        {{request.user|title}} <i class="fas fa-sign-out-alt" style="font-size: 20;"></i>
-                        <span class="logoutText">Log out</span>
+                <li class="nav-item dropdown mt-1">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        {{request.user|title}}
                     </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link logout" target="_blank" href="/admin/">
-                        Manage Site <i class="fas fa-sign-out-alt" style="font-size: 20;"></i>
-                        <span class="logoutText">Log out</span>
-                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Edit account</a></li>
+                        {% if not request.user.is_annonymous %}
+                        <li><a class="dropdown-item" href="/admin" target="_blank">Manage Site</a></li>
+                        {% endif %}
+                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                    </ul>
                 </li>
             </ul>
             {% else %}
