branch home page

--- a/HealthClub/templates/password_reset/password_reset_done.html
+++ b/HealthClub/templates/password_reset/password_reset_done.html
@@ -1,3 +1,19 @@
-<h3>password reset complete</h3>
-<p>your password has been set. you may go ahead and log in now</p>
-<a href="{% url 'login' %}">log in</a>
+{% extends 'physio-slim/main.html' %}
+{% load static %}
+
+{% block head %}
+<title>Reset password</title>
+{% endblock %}
+
+
+
+{% block main %}
+<div class="container py-5">
+    <div class="row">
+
+        <h3>Password reset complete!</h3>
+        <p>Your password has been set. you may go ahead and log in now</p>
+        <a href="{% url 'login' %}">Log in</a>
+    </div>
+</div>
+{% endblock %}
