--- a/HealthClub/templates/password_reset/password_reset_form.html
+++ b/HealthClub/templates/password_reset/password_reset_form.html
@@ -1,9 +1,21 @@
-<h3>Enter your new password</h3>
+{% extends 'physio-slim/main.html' %}
+{% load static %}
+
+{% block head %}
+<title>Reset password</title>
+{% endblock %}
+
+
+{% block main %}
+<div class="container py-5">
+  <h3>Enter your new password</h3>
 <p>
     Please enter your password twice so we can verify that your typed it in correctly
 </p>
 <form method="post">
   {% csrf_token %} 
-  {{form}}
-  <input type="submit" name="Update password">
+  {{form.as_p}}
+  <button type="submit" name="Update password" class="btn btn-primary" >Update password</button>
 </form>
+</div>
+{% endblock %}
