--- a/HealthClub/templates/password_reset/password_reset_sent.html
+++ b/HealthClub/templates/password_reset/password_reset_sent.html
@@ -1,9 +1,30 @@
-<p>
-  We've emailed you instructions for setting your password, if an account exists
-  with the email you entered. You should receive them shortly.
-</p>
 
-<p>
-  If you don't receive an email, please make sure you've entered the address you
-  registered with, and check your spam folder
-</p>
+
+{% extends 'physio-slim/main.html' %}
+{% load static %}
+
+{% block head %}
+<title>Reset password</title>
+{% endblock %}
+
+
+
+{% block main %}
+<div class="container py-5">
+  <div class="row">
+    <h1>Sent!</h1>
+    <p>
+      We've emailed you instructions for setting your password, if an account exists
+      with the email you entered. You should receive them shortly.
+    </p>
+    
+    <p>
+      If you don't receive an email, please make sure you've entered the email address you
+      <b>registered</b> with, and check your <b>spam folder</b>.
+    </p>
+  </div>
+</div>
+{% endblock %}
+
+
+
