--- a/HealthClub/templates/physio-slim/home.html
+++ b/HealthClub/templates/physio-slim/home.html
@@ -3,8 +3,6 @@
 
 {% block head %}
 <title>Home</title>
-<link rel="stylesheet" href="{% static 'css/tag.css' %}">
-<link rel="stylesheet" href="{% static 'css/home.css' %}">
 {% endblock %}
 
 {% block navbar %}
@@ -16,14 +14,14 @@
 
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner " style="height:80vh;margin-top: 7%;">
-        <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-item active" data-bs-interval="3000">
+            <img src="{% static 'images/img1.jpg' %}" class="d-block w-100" alt="img1">
         </div>
-        <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-item" data-bs-interval="3000">
+            <img src="{% static 'images/img2.jpg' %}" class="d-block w-100" alt="...">
         </div>
-        <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-item" data-bs-interval="3000">
+            <img src="{% static 'images/img3.jpg' %}" class="d-block w-100" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -34,5 +32,51 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
+</div>
+<div id="about">
+    <div id="carouselExampleControls" class="carousel slide py-3" data-bs-ride="carousel">
+        <div class="carousel-inner " style="height:80vh;margin-top: 7%;">
+            <div class="carousel-item active" data-bs-interval="3000">
+                <img src="{% static 'images/img1.jpg' %}" class="d-block w-100" alt="img1">
+            </div>
+            <div class="carousel-item" data-bs-interval="3000">
+                <img src="{% static 'images/img2.jpg' %}" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item" data-bs-interval="3000">
+                <img src="{% static 'images/img3.jpg' %}" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+</div>
+<div id="contact-us">
+    <div id="carouselExampleControls pb-3" class="carousel slide py-3" data-bs-ride="carousel">
+        <div class="carousel-inner " style="height:80vh;margin-top: 7%;">
+            <div class="carousel-item active" data-bs-interval="3000">
+                <img src="{% static 'images/img1.jpg' %}" class="d-block w-100" alt="img1">
+            </div>
+            <div class="carousel-item" data-bs-interval="3000">
+                <img src="{% static 'images/img2.jpg' %}" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item" data-bs-interval="3000">
+                <img src="{% static 'images/img3.jpg' %}" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 </div>
 {% endblock %}
