--- a/HealthClub/templates/password_reset/password_reset.html
+++ b/HealthClub/templates/password_reset/password_reset.html
@@ -1,9 +1,24 @@
-<h3>password reset</h3>
-<p>
-  Forgotten your password? Enter your email address below, and we'11 email
-  instructions for setting a new one.
-</p>
-<form method="post">
-  {% csrf_token %} {{ form }}
-  <input type="submit" name="send email" />
-</form>
+{% extends 'physio-slim/main.html' %}
+{% load static %}
+
+{% block head %}
+<title>Reset password</title>
+{% endblock %}
+
+
+
+{% block main %}
+<div class="container py-5">
+  <div class="row">
+    <h3>Reset your password</h3>
+    <p>
+      Forgotten your password? Enter your email address below, and we'll email
+      you instructions for setting a new one.
+    </p>
+    <form method="post">
+      {% csrf_token %} {{ form.as_p }}
+      <button type="submit" name="send email" class="btn btn-primary">send email</button>
+    </form>
+  </div>
+</div>
+{% endblock %}
