--- a/HealthClub/templates/physio-slim/login.html
+++ b/HealthClub/templates/physio-slim/login.html
@@ -1,13 +1,17 @@
+{% extends 'physio-slim/main.html' %}
+{% load static %}
+{% block head %}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+	integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
+<title>Login</title>
 
-<head>
-    <title>Login </title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+{% endblock %}
 
-</head>
+{% block main%}
 <div class="container h-100">
 	<div class="d-flex justify-content-center h-100">
 		<div class="user_card">
@@ -20,12 +24,13 @@
 				<form method="POST" action=""> {% csrf_token %}
 					<div class="input-group mb-3">
 						<div class="input-group-append">
+							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" label= "username" name="username" placeholder="username..." class="form-control">
-
+						<input type="text" name="username" placeholder="Username..." class="form-control">
 					</div>
 					<div class="input-group mb-2">
 						<div class="input-group-append">
+							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
 						<input type="password" name="password" placeholder="Password..." class="form-control">
 					</div>
@@ -38,12 +43,14 @@
 				</form>
 			</div>
 			<div class="mt-4">
-				<div style="color: #fff;">
-					Don't have an account? <a href="{% url 'register' %}" class="ml-2 link-dark">Sign Up</a>
-					 <a href="{% url 'reset_password' %}" class="ml-2 link-dark">Forgot your password?</a>
+				<div class="d-flex justify-content-center links" style="color: #000;">
+					<a href="{% url 'reset_password' %}" class="ml-2 link-dark">Forgot your password</a> 
+					<a href="{% url 'register' %}" class="ml-2 link-dark">Sign Up</a>
 				</div>
+				
 
 			</div>
 		</div>
 	</div>
 </div>
+{% endblock %}
