--- a/HealthClub/templates/physio-slim/navbar.html
+++ b/HealthClub/templates/physio-slim/navbar.html
@@ -43,12 +43,9 @@
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item mt-1">
-                    <a class="nav-link" href="#">link1<i class='far fa-address-card'></i></a>
+                    <a class="nav-link" href="{% url 'home' %}"><b>Physio-Slim</b></a>
                 </li>
 
-                <li class="nav-item mt-1">
-                    <a class="nav-link" href="#">link3 <i class="fas fa-solid fa-plus" style="font-size: 12;"></i> </a>
-                </li>
                 <li class="nav-item dropdown mt-1">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -56,7 +53,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         {% for branch in branches %}
-                        <li><a class="dropdown-item" href="#">{{branch.name}}</a></li>
+                        <li><a class="dropdown-item" href="{% url 'branch' branch.id %}">{{branch.name}}</a></li>
                         {% endfor %}
                     </ul>
                 </li>
@@ -65,8 +62,13 @@
 
             {% if request.user.is_authenticated %}
 
-            <ul class="navbar-nav mr-auto mb-2 mb-lg-0 pb-0">
-
+            <ul class="navbar-nav mr-auto mb-2 mb-lg-0 pb-0" style="padding-right: 3%;">
+                <li class="nav-item mt-1">
+                    <a class="nav-link" href="#about"><b>About</b></a>
+                </li>
+                <li class="nav-item mt-1">
+                    <a class="nav-link" href="#contact-us"><b>Contact us</b></a>
+                </li>
                 <li class="nav-item dropdown mt-1">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -82,11 +84,6 @@
                 </li>
             </ul>
             {% else %}
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <!-- posts -->
-                </li>
-            </ul>
 
             <ul class="navbar-nav mr-auto mb-2 mb-lg-0 pb-0">
                 <li class="nav-item">
