fontawesome icons to navbar

--- a/HealthClub/PhysioSlim/static/css/navbar.css
+++ b/HealthClub/PhysioSlim/static/css/navbar.css
@@ -1,3 +1,15 @@
 .dropdown-item-font{
     font-size: 15px;
 }
+
+.dropdownitem {
+    width: 6em; 
+  }
+  
+  .dropdownitem:hover span {
+    display: none;
+  }
+  
+  .dropdownitem:hover:before {
+    content: "Account";
+  }
