styling css/html

--- a/HealthClub/PhysioSlim/static/css/login.css
+++ b/HealthClub/PhysioSlim/static/css/login.css
@@ -1,5 +1,11 @@
 
-
+body,
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background: #0d6efd !important;
+}
 
 .form_container {
     margin-top: 20px;
