--- a/HealthClub/templates/physio-slim/home.html
+++ b/HealthClub/templates/physio-slim/home.html
@@ -70,9 +70,12 @@
             </div>
             {% endfor %}
         </div>
-
+        <!-- socialmedia icons -->
         <div class="text-center py-1" > Check us on social media 
-              <div class="col-sm "><i class="fa-brands fa-facebook-f icons py-3 px-3"></i> <i class="fa-brands fa-instagram icons"></i></div>
+              <div class="col-sm ">
+                <a href="https://www.facebook.com/Physio-slim-1642568222659235/" target="_blank"><i class="fa-brands fa-facebook-f icons py-3 px-3"></i> </a>
+                <a href="https://instagram.com/physio_slim33?utm_medium=copy_link" target="_blank"><i class="fa-brands fa-instagram icons"></i></a>
+            </div>
           </div>
     </div>
 </div>
