--- a/HealthClub/templates/physio-slim/login.html
+++ b/HealthClub/templates/physio-slim/login.html
@@ -1,6 +1,7 @@
 {% extends 'physio-slim/main.html' %}
 {% load static %}
 {% block head %}
+
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -12,7 +13,7 @@
 {% endblock %}
 
 {% block main%}
-<div class="container h-100">
+<div class="container-fluid h-100">
 	<div class="d-flex justify-content-center h-100">
 		<div class="user_card">
 			<div class="d-flex justify-content-center">
