--- a/HealthClub/PhysioSlim/static/css/layout.css
+++ b/HealthClub/PhysioSlim/static/css/layout.css
@@ -5,8 +5,8 @@
     color: #0d6efd  !important;
 }
 .background-light{
-    background-color: red !important;
+    background-color: #0984e3 !important;
 }
 .background-dark{
-    background-color: red  !important;
+    background-color: #0d6efd  !important;
 }
