--- a/HealthClub/templates/physio-slim/home.html
+++ b/HealthClub/templates/physio-slim/home.html
@@ -6,9 +6,9 @@
 <link rel="stylesheet" href="{% static 'css/contactUs.css' %}">
 {% endblock %}
 
-{% block navbar %}
+<!-- {% block navbar %}
 {% include 'physio-slim/navbar.html' %}
-{% endblock %}
+{% endblock %} -->
 
 {% block main %}
 <!-- "col-md-4 col-sm-12 mr-2" -->
