--- a/HealthClub/templates/physio-slim/register.html
+++ b/HealthClub/templates/physio-slim/register.html
@@ -1,3 +1,7 @@
+
+{% extends 'physio-slim/main.html' %}
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,6 +15,9 @@
 
 </head>
 
+
+
+{% block main %}
 <body>
 
     <div class="container h-100">
@@ -55,5 +62,7 @@
 
 
 </body>
+
+{% endblock %}
 
 </html>
