--- a/HealthClub/templates/physio-slim/main.html
+++ b/HealthClub/templates/physio-slim/main.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <html lang="en">
 
 <head>
@@ -28,9 +29,9 @@
 </head>
 
 <body>
-    {% block navbar %}
-    {% endblock %}
-    <div class="container">
+
+    {% include "physio-slim/navbar.html" %}
+    <div >
         {% block main %}
 
         {% endblock %}
