--- a/HealthClub/templates/physio-slim/branchHomePage.html
+++ b/HealthClub/templates/physio-slim/branchHomePage.html
@@ -2,7 +2,10 @@
 {% load static %}
 
 {% block head %}
-<title>Home</title>
+<head>
+  <link rel="stylesheet" type="text/css" href="{% static 'fontawesome/css/all.min.css' %}" />
+  <title> {{branch.name}} Home</title>
+</head>
 {% endblock %}
 
 {% block navbar %}
@@ -33,5 +36,30 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+<!-- <div class = " border border-dark"> -->
+    <div class="row border border-dark p-1 mb-4"> {% for class in classes %}
+
+      <div class="col-12 col-md-6 col-lg-4 ">
+        <div class="card mb-4">
+
+          <div class="bg-image hover-overlay ripple p-1" data-mdb-ripple-color="light">
+              <img src="{{MEDIA_URL}}/{{class.photo}}" class="img-fluid" style="width:  100%;
+                            height: 200px;
+                            background-size: cover;" /> </a>
+            <a href="#!">
+              <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+            </a>
+          </div>
+            <h4 class="card-title m-1 ">{{class}}</h4>
+
+
+         
+        </div>
+      </div>
+      {% endfor %}
+      <a href="{% url 'class' branch.id %}" class="col-2 offset-10">  
+        See More <i class="fa-solid fa-arrow-right-long-to-line "></i></a>
+</div>
+
 
 {% endblock %}
