--- a/HealthClub/templates/physio-slim/home.html
+++ b/HealthClub/templates/physio-slim/home.html
@@ -6,14 +6,14 @@
 <link rel="stylesheet" href="{% static 'css/contactUs.css' %}">
 {% endblock %}
 
-<!-- {% block navbar %}
+{% block navbar %}
 {% include 'physio-slim/navbar.html' %}
-{% endblock %} -->
+{% endblock %}
 
 {% block main %}
 <!-- "col-md-4 col-sm-12 mr-2" -->
 
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" wi>
     <div class="carousel-inner " style="height:80vh;margin-top: 7%;">
         <div class="carousel-item active" data-bs-interval="3000">
             <img src="{% static 'images/img1.jpg' %}" class="d-block w-100" alt="img1">
