--- a/HealthClub/templates/physio-slim/login.html
+++ b/HealthClub/templates/physio-slim/login.html
@@ -34,7 +34,9 @@
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
 						<input type="password" name="password" placeholder="Password..." class="form-control">
+						
 					</div>
+					<a href="{% url 'reset_password' %}" class="ml-2 fs-6">Forgot your password?</a> 
 					{% for message in messages %}
 					<p id="messages" style="font-weight: bolder;">{{message}}</p>
 					{% endfor %}
@@ -43,13 +45,10 @@
 					</div>
 				</form>
 			</div>
-			<div class="mt-4">
-				<div class="d-flex justify-content-center links" style="color: #000;">
-					<a href="{% url 'reset_password' %}" class="ml-2 link-dark">Forgot your password</a> 
-					<a href="{% url 'register' %}" class="ml-2 link-dark">Sign Up</a>
+			<div>
+				<div class="d-flex justify-content-center links text-light" >
+					Don't have an account?<a href="{% url 'register' %}" class="ml-2">Sign Up</a>
 				</div>
-				
-
 			</div>
 		</div>
 	</div>
