--- a/HealthClub/templates/physio-slim/branchHomePage.html
+++ b/HealthClub/templates/physio-slim/branchHomePage.html
@@ -33,7 +33,7 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
-<!-- <div class = " border border-dark"> -->
+<!--  classes Div  -->
     <div class="row  p-1 mb-4"> 
       <h3 class="m-2"> Our Classes</h3>
       {% for class in classes %}
