--- a/HealthClub/templates/physio-slim/verify.html
+++ b/HealthClub/templates/physio-slim/verify.html
@@ -13,5 +13,6 @@
       {{ form.as_p }}
       <button type="submit">Verify</button>
     </form>
+    <a href="{% url 're-verify' %}">Verify</a>
 </body>
 </html>
