--- a/HealthClub/templates/physio-slim/register.html
+++ b/HealthClub/templates/physio-slim/register.html
@@ -1,4 +1,3 @@
-
 {% extends 'physio-slim/main.html' %}
 {% load static %}
 
@@ -18,6 +17,7 @@
 
 
 {% block main %}
+
 <body>
 
     <div class="container h-100">
@@ -34,6 +34,110 @@
                             <input class="btn login_btn" type="submit" value="Register Account">
                         </div>
                     </form>
+                    <!-- <form method="POST" enctype="multipart/form-data"> <input type="hidden"
+                            class=" form-control">
+                            {% csrf_token %}
+                        <p>
+                            <label for="id_username">Username:</label>
+                            <input type="text" name="username" class="form-control form-control" maxlength="150"
+                                autofocus="" required="" id="id_username" placeholder="Username..">
+                        </p>
+
+
+                        <p>
+                            <label for="id_email">Email address:</label>
+                            <input type="text" name="email" class="form-control form-control" maxlength="254"
+                                id="id_email" placeholder="Email..">
+                        </p>
+                        <p>
+                            <label for="id_password1">Password:</label>
+                            <input type="password" name="password1" autocomplete="new-password" required=""
+                                id="id_password1" placeholder="Enter password..." class=" form-control">
+
+                            <span class="helptext"></span>
+                            <span> password must contain at least 8 characters.</span>
+
+                        </p>
+                        
+                        
+                        <p>
+                            <label for="id_password2">Password confirmation:</label>
+                            <input type="password" name="password2" autocomplete="new-password" required=""
+                                id="id_password2" placeholder="Re-enter Password..." class=" form-control">
+
+                        </p>
+
+
+                        <p>
+                            <label for="id_phone">Phone:</label>
+                            <input type="tel" name="phone" class="form-control form-control" maxlength="128" required=""
+                                id="id_phone">
+
+
+                        </p>
+
+
+                        <p>
+                            <label for="id_avatar">Avatar:</label>
+                            <input type="file" name="avatar" class="form-control form-control" accept="image/*"
+                                required="" id="id_avatar">
+
+                        </p>
+
+
+                        <p>
+                            <label for="id_age">Age:</label>
+                            <input type="number" name="age" class="form-control form-control" required="" id="id_age">
+
+
+                        </p>
+
+
+                        <p>
+                            <label for="id_gender">Gender:</label>
+                            <select name="gender" class="form-control" required="" id="id_gender">
+                                <option value="" selected="">Choose your gender</option>
+
+                                <option value="male">male</option>
+
+                                <option value="female">female</option>
+
+                            </select>
+
+
+                        </p>
+
+
+                        <p>
+                            <label for="id_branch">Branch:</label>
+                            <select name="branch" class="form-control" required="" id="id_branch">
+                                <option value="" selected="">---------</option>
+
+                                <option value="1">branch 1</option>
+
+                                <option value="2">branch 2</option>
+
+                                <option value="3">branch 3</option>
+
+                            </select>
+
+
+                        </p>
+
+
+                        <p>
+                            <label for="id_membership_num">Membership num:</label>
+                            <input type="text" name="membership_num" maxlength="50" id="id_membership_num"
+                                class=" form-control">
+
+
+
+
+                        </p>
+                        <div class="d-flex justify-content-center mt-3 login_container">
+                            <input class="btn login_btn form-control" type="submit" value="Register Account">
+                        </div>
+                    </form> -->
                 </div>
 
 
