--- a/HealthClub/templates/physio-slim/navbar.html
+++ b/HealthClub/templates/physio-slim/navbar.html
@@ -145,8 +145,8 @@
                 <li class="nav-item mt-1">
                     <a class="nav-link" href="#about"><b>About</b></a>
                 </li>
-                <li class="nav-item mt-1">
-                    <a class="nav-link" href="#contact-us"><b>Contact us</b></a>
+                <li class="nav-item mt-1 ">
+                    <a class="nav-link fs-6" href="#contact-us"><b>Contact</b></a>
                 </li>
                 <li class="nav-item dropdown mt-1">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
