--- a/HealthClub/templates/physio-slim/br_class.html
+++ b/HealthClub/templates/physio-slim/br_class.html
@@ -10,7 +10,8 @@
 {% endblock %}
 
 {% block main %}
-<div class="row  p-1"> 
+<div class="container">
+  <div class="row  p-1 py-5"> 
     {% for class in classes %}
 
     <div class="col-12 col-md-6 col-lg-4 ">
@@ -38,5 +39,7 @@
     {% endfor %}
    
 </div>
+</div>
+
 
 {% endblock %}
