--- a/HealthClub/templates/physio-slim/br_class.html
+++ b/HealthClub/templates/physio-slim/br_class.html
@@ -11,34 +11,33 @@
 
 {% block main %}
 <div class="container">
-  <div class="row  p-1 py-5"> 
+  <div class="row  p-1 py-5">
     {% for class in classes %}
 
     <div class="col-12 col-md-6 col-lg-4 ">
       <div class="card mb-4">
 
         <div class="bg-image hover-overlay ripple p-1" data-mdb-ripple-color="light">
-            <img src="{{MEDIA_URL}}/{{class.photo}}" class="img-fluid" style="width:  100%;
+          <img src="{{MEDIA_URL}}/{{class.photo}}" class="img-fluid" style="width:  100%;
                           height: 200px;
                           background-size: cover;" /> </a>
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
         </div>
-          <h4 class="card-title m-1 ">{{class}}</h4>
-          <p class="card-text m-2" style="white-space: nowrap;
+        <h4 class="card-title m-1 ">{{class}}</h4>
+        <p class="card-text m-2" style="white-space: nowrap;
                         overflow: hidden;
                         text-overflow: ellipsis;  ">
-              {{class.description}}
-            </p>
-
-
-       
+          {{class.description}}
+          <button>subscribe</button>
+        </p>
+        
       </div>
     </div>
     {% endfor %}
-   
-</div>
+
+  </div>
 </div>
 
 
