--- a/HealthClub/templates/physio-slim/home.html
+++ b/HealthClub/templates/physio-slim/home.html
@@ -58,22 +58,24 @@
 </div> -->
 <div id="contact-us">
     <div class="contact-us container py-5">
-        <div class="row py-5" >
+        <div class="row py-5">
             {% for branch in branches %}
             <div class="col text-center">
-                <a href="{% url 'branch' branch.id %}"><p>{{branch.name|title}}</p></a>
+                <a href="{% url 'branch' branch.id %}">
+                    <p>{{branch.name|title}}</p>
+                </a>
                 <p>{{branch.address|title}}</p>
-                <p>{{branch.phone}}</p>
+                <p><i class="fa-solid fa-phone fs-6"></i> {{branch.phone}}</p>
             </div>
             {% endfor %}
         </div>
         <!-- socialmedia icons -->
-        <div class="text-center py-1" > Check us on social media 
-              <div class="col-sm ">
-                <a href="https://www.facebook.com/Physio-slim-1642568222659235/" target="_blank"><i class="fa-brands fa-facebook-f icons py-3 px-3"></i> </a>
-                <a href="https://instagram.com/physio_slim33?utm_medium=copy_link" target="_blank"><i class="fa-brands fa-instagram icons"></i></a>
+        <div class="text-center py-1"> Check us on social media
+            <div class="col-sm text-center">
+               <a href="https://www.facebook.com/Physio-slim-1642568222659235/" target="_blank"><i class="fa-brands fa-facebook-f px-2"></i></a>
+               <a href="https://instagram.com/physio_slim33?utm_medium=copy_link" target="_blank"><i class="fa-brands fa-instagram px-2"></i></a>
             </div>
-          </div>
+        </div>
     </div>
 </div>
 {% endblock %}
