--- a/HealthClub/templates/physio-slim/login.html
+++ b/HealthClub/templates/physio-slim/login.html
@@ -13,12 +13,10 @@
 {% endblock %}
 
 {% block main%}
-<div class="container-fluid h-100">
+<div class="container-fluid h-100 py-5">
 	<div class="d-flex justify-content-center h-100">
 		<div class="user_card">
 			<div class="d-flex justify-content-center">
-
-
 				<h3 id="form-title">LOGIN</h3>
 			</div>
 			<div class="d-flex justify-content-center form_container">
