--- a/HealthClub/templates/physio-slim/navbar.html
+++ b/HealthClub/templates/physio-slim/navbar.html
@@ -164,7 +164,7 @@
 
             {% if request.user.is_authenticated %}
 
-            <ul class="navbar-nav mr-auto mb-2 mb-lg-0 pb-0">
+            <ul class="navbar-nav  mb-2 mb-lg-0 pb-0">
             <!-- notification bell -->
             <div class="icons">
                 <div class = "notification1">
@@ -174,7 +174,7 @@
                         <li class="nav-item dropdown notification-section">
                             <a href="#" class="dropdown-toggle" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="true">
-                                <span><i class='fa fa-bell'></i></span>
+                                <span><i class='fa fa-bell fs-5 '></i></span>
                                 <div class="number" id="number">0</div>
                             </a>
                             
@@ -208,7 +208,7 @@
                     <a class="nav-link" href="#about"><b>About</b></a>
                 </li>
                 <li class="nav-item mt-1">
-                    <a class="nav-link" href="#contact-us"><b>Contact us</b></a>
+                    <a class="nav-link" href="#contact-us"><b>Contact </b></a>
                 </li>
                 <li class="nav-item dropdown mt-1">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
