--- a/HealthClub/templates/physio-slim/navbar.html
+++ b/HealthClub/templates/physio-slim/navbar.html
@@ -185,7 +185,7 @@
 
             {% if request.user.is_authenticated %}
 
-            <ul class="navbar-nav mr-auto mb-2 mb-lg-0 pb-0">
+            <ul class="navbar-nav mb-2 mb-lg-0 pb-0">
                 <!-- notification bell -->
                 <div>
                     <div>
@@ -195,7 +195,7 @@
                                     <a href="#" class="dropdown-toggle" id="navbarDropdown" role="button"
                                         data-bs-toggle="dropdown" aria-expanded="true">
                                         <span><i class='fa fa-bell fs-5 pt-3'></i></span>
-                                        <!-- <span class="badge" id="number">0</span> -->
+                                        <span class="number" id="number">0</span>
                                     </a>
 
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown"
