--- a/HealthClub/PhysioSlim/static/css/layout.css
+++ b/HealthClub/PhysioSlim/static/css/layout.css
@@ -5,9 +5,8 @@
   color: #0d6efd !important;
 }
 .background-light {
-  background-color: #050301d5 !important;
+  background-color: #570b6e !important;
 }
 .background-dark {
-  background-color: #050301d5 !important;
+  background-color: #570b6e !important;
 }
-
