--- a/HealthClub/templates/physio-slim/branchHomePage.html
+++ b/HealthClub/templates/physio-slim/branchHomePage.html
@@ -169,30 +169,39 @@
 </div>
 
 
-<div class="row">
-  <div class="col-lg-4">
-    <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-    <h2>Heading</h2>
-    <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-    <p><a class="btn btn-secondary" href="#">View details »</a></p>
-  </div><!-- /.col-lg-4 -->
-  <div class="col-lg-4">
-    <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-    <h2>Heading</h2>
-    <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-    <p><a class="btn btn-secondary" href="#">View details »</a></p>
-  </div><!-- /.col-lg-4 -->
-  <div class="col-lg-4">
-    <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+<div class="row  p-1 mb-4"> 
+  <h3 class="m-2 "> Our PersonalTrainers</h3>
+  {% for PersonalTrainer in PersonalTrainers %}
+  
+  <!-- <div class="col-12 col-md-6 col-lg-4 ">
+    <div class="card mb-4">
 
-    <h2>Heading</h2>
-    <p>And lastly this, the third column of representative placeholder content.</p>
-    <p><a class="btn btn-secondary" href="#">View details »</a></p>
-  </div><!-- /.col-lg-4 -->
+      <div class="bg-image hover-overlay ripple p-1" data-mdb-ripple-color="light">
+          <img src="{{MEDIA_URL}}/{{offer.photo}}" class="img-fluid" style="width:  100%;
+                        height: 200px;
+                        background-size: cover;" /> </a>
+        <a href="#!">
+          <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);">{{ offer.name }}</div>
+        </a>
+      </div>
+      <div class="card-body">
+        <h4 class="card-title m-1 ">{{class}}</h4>
+      </div>
+    </div>
+  </div> -->
+  <div class="col row g3">
+  <div class="card" style="width: 18rem;">
+    <img src="{{MEDIA_URL}}/{{PersonalTrainer.photo}}" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">{{offer.name}}</h5>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
 </div>
 
+  {% endfor %}
 
 
 {% endblock %}
