--- a/HealthClub/templates/physio-slim/navbar.html
+++ b/HealthClub/templates/physio-slim/navbar.html
@@ -60,18 +60,18 @@
     }
 
     .number {
-        height: 22px;
-        width: 22px;
-        background-color: #d63031;
+        height: 24px;
+        width: 24px;
+        background-color: inherit;
         border-radius: 20px;
         color: white;
         text-align: center;
         position: absolute;
         top: -10px;
-        left: 55px;
+        left: 50px;
         padding: 3px;
-        border-style: solid;
         border-width: 1px;
+        padding-bottom: 2px;
     }
 
     .number:empty {
@@ -185,34 +185,20 @@
 
             {% if request.user.is_authenticated %}
 
-            <ul class="navbar-nav  mb-2 mb-lg-0 pb-0">
-            <!-- notification bell -->
-            <div class="icons">
-                <div class = "notification1">
-                <a href = "#">
-                    <div class = "notBtn" href = "#">
-                        
-                        <li class="nav-item dropdown notification-section">
-                            <a href="#" class="dropdown-toggle" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="true">
-                                <span><i class='fa fa-bell fs-5 '></i></span>
-                                <div class="number" id="number">0</div>
-                            </a>
-                            
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="notifications-dropdown"
-                                data-popper-placement="bottom-end">
-                            
-                            <div class = "display">
-                                <div class = "cont"><!-- Fold this div and try deleting evrything inbetween -->
-                                    {% for i in notifications %}
-                                    <div class = "sec new">
-                                    <a href = "#">
-                                        <li class="dropdown-item">{{i.message}}</li>
+            <ul class="navbar-nav" >
+                <!-- notification bell -->
+                <div class="icons" style="margin-top: -7px; margin-right: -15px;">
+                    <div class="notification1">
+                        <a href="#">
+                            <div class="notBtn" href="#">
+                                <li class="nav-item dropdown notification-section">
+                                    <a href="#" class="dropdown-toggle" id="navbarDropdown" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="true">
+                                        <span><i class='fa fa-bell fs-5 '></i></span>
+                                        <div class="number fs-6" id="number">0</div>
                                     </a>
-
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown"
                                         id="notifications-dropdown" data-popper-placement="bottom-end">
-
                                         <div class="display">
                                             <div class="cont">
                                                 <!-- Fold this div and try deleting evrything inbetween -->
